; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_filter.c_proxy_stream_write.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_filter.c_proxy_stream_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.proxy_stream = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i64)* @proxy_stream_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @proxy_stream_write(i32* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.proxy_stream*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = bitcast i32* %8 to %struct.proxy_stream*
  store %struct.proxy_stream* %9, %struct.proxy_stream** %7, align 8
  %10 = load %struct.proxy_stream*, %struct.proxy_stream** %7, align 8
  %11 = call i32 @assert(%struct.proxy_stream* %10)
  %12 = load %struct.proxy_stream*, %struct.proxy_stream** %7, align 8
  %13 = getelementptr inbounds %struct.proxy_stream, %struct.proxy_stream* %12, i32 0, i32 0
  %14 = load i8*, i8** %5, align 8
  %15 = load i64, i64* %6, align 8
  %16 = call i32 @git_buf_put(i32* %13, i8* %14, i64 %15)
  ret i32 %16
}

declare dso_local i32 @assert(%struct.proxy_stream*) #1

declare dso_local i32 @git_buf_put(i32*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
